// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder renders correctly with type="block" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-uj18cg-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1xkg3jd-StyledList {
  min-height: 200px;
  width: 100%;
  height: 100%;
  padding: 16px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  margin: 0;
}

.cache-1xkg3jd-StyledList>.e12uyvas1:not(:last-child) {
  border-bottom: 1px solid #e6e9f0;
}

.cache-1udri31-StyledLine {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 24px 16px;
}

.cache-1oxynlr-IconPlaceholder {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #d4dae7;
}

.cache-1sqnibl-Line {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-uj18cg-StyledContainer"
  >
    <ul
      class="cache-1xkg3jd-StyledList e12uyvas0"
    >
      <li
        class="cache-1udri31-StyledLine e12uyvas1"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </li>
      <li
        class="cache-1udri31-StyledLine e12uyvas1"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </li>
      <li
        class="cache-1udri31-StyledLine e12uyvas1"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </li>
    </ul>
    <div
      class="cache-q3qai6-StyledDiv e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="blocks" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-uj18cg-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-2szx0p-Block {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-1oxynlr-IconPlaceholder {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #d4dae7;
}

.cache-1sqnibl-Line {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-uj18cg-StyledContainer"
  >
    <div
      class="cache-sprtbs-StyledContainer e1g102fr1"
    >
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="box" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-uj18cg-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-1eti1qk-Block {
  height: 130px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-1oxynlr-IconPlaceholder {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #d4dae7;
}

.cache-1sqnibl-Line {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-uj18cg-StyledContainer"
  >
    <div
      class="cache-sprtbs-StyledContainer e1tgi0mz1"
    >
      <div
        class="cache-1eti1qk-Block e1tgi0mz0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-1eti1qk-Block e1tgi0mz0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-1eti1qk-Block e1tgi0mz0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-1eti1qk-Block e1tgi0mz0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-1eti1qk-Block e1tgi0mz0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-1eti1qk-Block e1tgi0mz0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-1eti1qk-Block e1tgi0mz0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-1eti1qk-Block e1tgi0mz0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="donut" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-uj18cg-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1mvslid-StyledSVG {
  height: 206px;
  width: 206px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.cache-1ebk3po-StyledCircle {
  transform-origin: 50% 50%;
  stroke: #d4dae7;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
}

.cache-1a6m9ou-LineList {
  display: grid;
  list-style: none;
  gap: 16px;
}

.cache-1sqnibl-Line {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-uj18cg-StyledContainer"
  >
    <div
      class="cache-a1981g-StyledContainer e3g0yqe3"
    >
      <svg
        class="cache-1mvslid-StyledSVG e3g0yqe2"
      >
        <circle
          class="cache-1ebk3po-StyledCircle e3g0yqe1"
          cx="103"
          cy="103"
          r="90"
        />
      </svg>
      <ul
        class="cache-1a6m9ou-LineList e3g0yqe0"
      >
        <li>
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </li>
        <li>
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </li>
        <li>
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </li>
        <li>
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </li>
      </ul>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="line" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-uj18cg-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1sqnibl-Line {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-uj18cg-StyledContainer"
  >
    <div
      class="cache-1sqnibl-Line e15slp7a0"
    />
    <div
      class="cache-q3qai6-StyledDiv e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="list" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-uj18cg-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-5r0rob-StyledList {
  list-style: none;
  padding: 0;
  margin: 0;
}

.cache-5r0rob-StyledList>.exf86062:nth-of-type(even) {
  background-color: #f6f6f8;
}

.cache-1ldrf1m-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 48px;
  padding: 4px 8px;
}

.cache-vmfh4y-StyledLine {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1sqnibl-Line {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-uj18cg-StyledContainer"
  >
    <ul
      class="cache-5r0rob-StyledList exf86060"
    >
      <li
        class="cache-1ldrf1m-StyledItem exf86062"
      >
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
      </li>
      <li
        class="cache-1ldrf1m-StyledItem exf86062"
      >
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
      </li>
      <li
        class="cache-1ldrf1m-StyledItem exf86062"
      >
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine exf86061"
        >
          <div
            class="cache-1sqnibl-Line e15slp7a0"
          />
        </div>
      </li>
    </ul>
    <div
      class="cache-q3qai6-StyledDiv e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="slider" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-uj18cg-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1ibkrfq-StyledContainer {
  height: 277px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
  overflow: auto;
}

.cache-1v2rm0w-StyledCard {
  border: 1px solid #d4dae7;
  border-radius: 4px;
  width: 239px;
  height: 261px;
  overflow: hidden;
}

.cache-1qdcwka-StyledBanner {
  border: 1px solid #d4dae7;
  background-color: #d4dae7;
  width: 100%;
  height: 33%;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-uj18cg-StyledContainer"
  >
    <div
      class="cache-1ibkrfq-StyledContainer etju4zs2"
    >
      <div
        class="cache-1v2rm0w-StyledCard etju4zs1"
      >
        <div
          class="cache-1qdcwka-StyledBanner etju4zs0"
        />
      </div>
      <div
        class="cache-1v2rm0w-StyledCard etju4zs1"
      >
        <div
          class="cache-1qdcwka-StyledBanner etju4zs0"
        />
      </div>
      <div
        class="cache-1v2rm0w-StyledCard etju4zs1"
      >
        <div
          class="cache-1qdcwka-StyledBanner etju4zs0"
        />
      </div>
      <div
        class="cache-1v2rm0w-StyledCard etju4zs1"
      >
        <div
          class="cache-1qdcwka-StyledBanner etju4zs0"
        />
      </div>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders default variant 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-uj18cg-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-2szx0p-Block {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-1oxynlr-IconPlaceholder {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #d4dae7;
}

.cache-1sqnibl-Line {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-uj18cg-StyledContainer"
  >
    <div
      class="cache-sprtbs-StyledContainer e1g102fr1"
    >
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
      <div
        class="cache-2szx0p-Block e1g102fr0"
      >
        <div
          class="cache-1oxynlr-IconPlaceholder eki2pl50"
        />
        <div
          class="cache-1sqnibl-Line e15slp7a0"
        />
      </div>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;
